title label added

--- a/page3.html
+++ b/page3.html
@@ -98,8 +98,8 @@
             <a href="">
                 Logistics
             </a>
-            <a href="">Login</a>
-            <a href="">Signup</a>
+            <a href="" title="Login">Login</a>
+            <a href="" title="Signup">Signup</a>
         </div>
     </div>
     </nav>
@@ -231,21 +231,21 @@
 
     <footer class="footer">
         <div class="social">
-          <a href="">
+          <a href="" title="PortWala">
             <h1>PortWala</h1>
           </a>
           <ul>
             <li>
-              <a href=""><i class="fa fa-facebook"></i></a>
+              <a href="" title="Facebook"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
-              <a href=""><i class="fa fa-instagram"></i></a>
+              <a href="" title="Instagram"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
-              <a href=""><i class="fa fa-linkedin"></i></a>
+              <a href="" title="Linkedin"><i class="fa fa-linkedin"></i></a>
             </li>
             <li>
-              <a href=""><i class="fa fa-twitter"></i></a>
+              <a href="" title="twitter"><i class="fa fa-twitter"></i></a>
             </li>
           </ul>
         </div>
